--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h3 class="mb-5 my-3">
                     <em>Synck - Best Estonian CS:GO team!</em>
                 </h3>
-                <a class="btn btn-primary btn-xl" href="#about">visit our store</a>
+                <a class="btn btn-primary btn-xl" href="#about">Visit our store!</a>
             </div>
         </header>
         
@@ -131,7 +131,7 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://arvutitark.ee/">
                             <img class="img-fluid" src="assets/img/at-logo-full.jpg" alt="..." />
                             <div class="caption">
                                 <div class="caption-content">
@@ -142,7 +142,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://wolt.com/">
                             <img class="img-fluid" src="assets/img/wolt-logo.jpeg" alt="..." />
                             <div class="caption">
                                 <div class="caption-content">
