optimized images, small color adjust

--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
                 </h1>
                 <h3 class="mb-5 mt-5 text-center">
                     <div class="row mx-auto">
-                        <div class="col-3">
-                            <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://www.instagram.com/synckesports"><i class="fab fa-facebook"></i></a>
+                        <div class="col-2">
+                            <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://www.instagram.com/synckesports"><i class="fab fa-instagram"></i></a>
                         </div>
-                        <div class="col-3">
+                        <div class="col-2">
                             <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://twitter.com/synckesports"><i class="fab fa-twitter"></i></a>
                         </div>
-                        <div class="col-3">
+                        <div class="col-2">
                             <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://www.twitch.tv/synckesports"><i class="fab fa-twitch"></i></a>
                         </div>
-                        <div class="col-3">
+                        <div class="col-2">
+                            <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://www.tiktok.com/@synckesports"><i class="fab fa-tiktok"></i></a>
+                        </div>
+                        <div class="col-2">
+                            <a class="social-link social-link-circle text-white mr-3 mx-auto" href="https://discord.gg/FUrwktjPNt"><i class="fab fa-discord"></i></a>
+                        </div>
+                        <div class="col-2">
                             <a class="social-link social-link-circle text-white mx-auto" href="https://t.me/synckesports"><i class="fab fa-telegram"></i></a>
                         </div>
                     </div>
@@ -81,19 +87,19 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-2 col-md-2 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\fejtz.png' alt="custom image" class="custom-image">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\fejtz.webp' alt="custom image" class="custom-image big-boy">
                         </span>
                         <h4><strong>fejtZ</strong></h4>
                         <p class="text-faded mb-0">Kristjan Allsaar</p>
                     </div>
                     <div class="col-lg-2 col-md-2 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\consss2.png' alt="custom image" class="custom-image">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\consss2.webp' alt="custom image" class="custom-image">
                         </span>
                         <h4><strong>consss</strong></h4>
                         <p class="text-faded mb-0">Alvar Rämman</p>
                     </div>
                     <div class="col-lg-2 col-md-2 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\wahtzz.png' alt="custom image" class="custom-image">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\wahtzz.webp' alt="custom image" class="custom-image big-boy">
                         </span>
                         <h4><strong>Wahtzz</strong></h4>
                         <p class="text-faded mb-0">
@@ -101,7 +107,7 @@
                         </p>
                     </div>
                     <div class="col-lg-2 col-md-2 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\eku.png' alt="custom image" class="custom-image">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\eku.webp' alt="custom image" class="custom-image">
                         </span>
                         <h4><strong>eku</strong></h4>
                         <p class="text-faded mb-0">
@@ -109,7 +115,7 @@
                         </p>
                     </div>
                     <div class="col-lg-2 col-md-2 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\andu.png' alt="custom image" class="custom-image">
+                        <span class="service-icon rounded-circle mx-auto mb-3"><img src='assets\logos\andu.webp' alt="custom image" class="custom-image">
                         </span>
                         <h4><strong>aNdu</strong></h4>
                         <p class="text-faded mb-0">Andreas Maasing</p>
@@ -219,6 +225,12 @@
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.twitch.tv/synckesports"><i class="fab fa-twitch"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.tiktok.com/@synckesports"><i class="fab fa-tiktok"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a class="social-link rounded-circle text-white mr-3" href="https://discord.gg/FUrwktjPNt"><i class="fab fa-discord"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="https://t.me/synckesports"><i class="fab fa-telegram"></i></a>
