--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
         </section> -->
         <!-- Services-->
-        <section class="content-section bg-primary text-white text-center" id="services">
+        <!-- <section class="content-section bg-primary text-white text-center" id="services">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">players</h3>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Callout-->
         <!-- <section class="callout">
             <div class="container px-4 px-lg-5 text-center">
